experimental/parser/testdata/lexer/braces/stray-close.proto.stderr.txt
error: encountered unmatched `{` delimiter
  --> testdata/lexer/braces/stray-close.proto:1:1
   | 
 1 | {
   | ^ expected a closing `}`
 2 |     ]
   |     - closed by this instead
 3 | }
   | - help: perhaps it was meant to match this?

encountered 1 error
